src.zip 추가 지렁이게임 오픈소스 리팩토링 한거
소켓부분 좀 바꾼건데 나중에 다시봐야함..

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     password: ENC(xrVfu7ieAx/1bR3pXqshew==)
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  thymeleaf:
+    prefix: classpath:templates/
+    suffix: .html
+    cash: false
+
     jpa:
       hibernate:
         ddl-auto: none
