--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,17 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
+	implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '6.6'
+
+
+	// client jar file
+	compileOnly 'org.webjars:sockjs-client:1.5.1'
+	compileOnly 'org.webjars:jquery:3.6.0'
+	compileOnly 'org.webjars:stomp-websocket:2.3.4'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
