--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ configurations {
 repositories {
 	mavenCentral()
 }
+//test
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
