--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
-	implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '6.6'
 
 
-	// client jar file
+	//webjar 형식으로 빌드할 떄 프론트에 필요한 lib 추가
 	compileOnly 'org.webjars:sockjs-client:1.5.1'
 	compileOnly 'org.webjars:jquery:3.6.0'
 	compileOnly 'org.webjars:stomp-websocket:2.3.4'
 
+	runtimeOnly group: 'com.h2database', name: 'h2', version: '1.4.200'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
