--- a/build.gradle
+++ b/build.gradle
@@ -27,16 +27,17 @@ dependencies {
 	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.webjars:webjars-locator-core:0.48'
 
 
 	//webjar 형식으로 빌드할 떄 프론트에 필요한 lib 추가
-	compileOnly 'org.webjars:sockjs-client:1.5.1'
-	compileOnly 'org.webjars:jquery:3.6.0'
-	compileOnly 'org.webjars:stomp-websocket:2.3.4'
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	implementation 'org.webjars:jquery:3.6.0'
+	implementation 'org.webjars:stomp-websocket:2.3.4'
 	implementation 'org.webjars:vue:2.6.14'
 
 	runtimeOnly group: 'com.h2database', name: 'h2', version: '1.4.200'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
