--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       hibernate:
         ddl-auto: none
         dialect: org.hibernate.dialect.MySQL8Dialect
-        show_sql: true
+        show_sql: false
         format_sql: true
         default_batch_fetch_size: 100
         use_sql_comments: true
