--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.webjars:webjars-locator-core:0.48'
+	implementation 'com.google.code.gson:gson:2.8.9'
 
 
 	//webjar 형식으로 빌드할 떄 프론트에 필요한 lib 추가
