--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.game'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '1.8'
 
 configurations {
@@ -27,15 +27,14 @@ dependencies {
 	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.integration:spring-integration-ip:5.5.9'
 	implementation 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.webjars:webjars-locator-core:0.48'
-	implementation 'com.google.code.gson:gson:2.8.9'
+	implementation 'org.webjars:webjars-locator-core:0.50'
+	implementation 'com.google.code.gson:gson:2.9.0'
 
 
 	//webjar 형식으로 빌드할 떄 프론트에 필요한 lib 추가
 	implementation 'org.webjars:sockjs-client:1.5.1'
-	implementation 'org.webjars:jquery:3.6.0'
-	implementation 'org.webjars:stomp-websocket:2.3.4'
 	implementation 'org.webjars:vue:2.6.14'
 
 	implementation 'org.projectlombok:lombok'
