--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,11 @@ dependencies {
 	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.integration:spring-integration-ip:5.5.9'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.webjars:webjars-locator-core:0.50'
 	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'io.netty:netty-all:4.1.75.Final'
+
 
 
 	//webjar 형식으로 빌드할 떄 프론트에 필요한 lib 추가
